EPBDS-13275 Remove references on localhost environment and hardcoded ports